# utoml

./: .gitignore  LICENSE  README.md  pyproject.toml  toml.py  utoml.py
tests/: test.toml  test_toml.py
