[project]
name = "utoml"
description = "Simple TOML parser for MicroPython"
version = "1.1.0"
keywords = ["micropython", "toml", "parser"]
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Marc Vilella", email = "mvilella.and@gmail.com"},
]

[project.urls]
Repository = "https://github.com/markusand/utoml"
Issues = "https://github.com/markusand/utoml/issues"

[tool.pylint]
ignore = ["__pycache__", ".venv"]

[tool.black]
line-length = 100
